# astrotext

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  NOTICE  README.md  astrotext  pyproject.toml  verification_report.md
data/gazetteer/: README
data/kernel/: chiron_horizons.npz  hipparcos_22.json  se_deltat_parity.csv
docs/: API.md  FORMAT.md  KERNEL.md  PLAN.md  TECHNIQUES.md
src/astrotext/: __init__.py  __main__.py  config.py  dossier.py  http_server.py  mcp_server.py  options.py
src/astrotext/core/: __init__.py  angles.py  aspects.py  chart.py  dignities.py  hours.py  settings.py  stars.py  zodiac.py
src/astrotext/ephem/: __init__.py  engine.py  points.py
src/astrotext/kernel/: __init__.py  bodies.py  frames.py  houses.py  observing.py  points.py  sidereal.py  timescales.py
src/astrotext/render/: __init__.py  glossary.py  json_out.py  parse.py  text.py  timed.py  vedic.py
src/astrotext/techniques/: __init__.py  firdaria.py  profections.py  progressions.py  returns.py  search.py  transits.py
src/astrotext/timespace/: __init__.py  gazetteer.py  moment.py  place.py  zh_exonyms.py
src/astrotext/verify/: __init__.py  report.py  swetest_ref.py
tests/: conftest.py  test_smoke.py
tests/cross/: test_vs_swetest.py
tests/edge/: test_gazetteer.py  test_timespace.py
tests/golden/: fixtures.py  test_dossier.py  test_http_server.py  test_json_output.py  test_mcp_server.py  test_settings_api.py  test_snapshots.py  test_timed_snapshots.py
tests/golden/snapshots/: beijing-dst--firdaria.txt  beijing-dst.txt  (+40 more)
tests/kernel/: test_bodies.py  test_frames.py  test_houses.py  test_observing.py  test_points.py  test_sidereal.py  test_timescales.py
tests/properties/: test_angles.py  test_chart_invariants.py  test_progressions.py  test_returns_timelords.py  test_vedic.py
tools/: build_gazetteer.py  check_no_swiss.py  fetch_chiron.py  fetch_hipparcos.py  fetch_kernel_data.py  gen_deltat_parity.py  gen_kernel_fixtures.py  k0_probe.py  regen_snapshots.py  vendor.sh  verify_kernel.py  verify_report.py
(+14 files in other folders)
