[project]
name = "astrotext"
version = "1.0.0"
description = "Plain-text astrology chart engine for AI agents"
requires-python = ">=3.11"
dependencies = [
    "pygments>=2.20.0",
    "setuptools>=83.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "smoke: fast environment sanity checks",
    "cross: comparisons against the swetest reference CLI",
]
